<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:background="@color/backgroundApp"
    app:theme="@style/AppTheme"
    tools:context="kku.toolmee.bootcbatong.emsvolunteer.show_profileSufferer">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="1dp"
                app:srcCompat="@drawable/profile"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="325dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:background="@drawable/background_page"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_Sufferer"
                        android:textSize="20dp"
                        android:textColor="@color/textColor"
                        />
                    <TextView
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lastname_Sufferer"
                        android:textSize="20dp"
                        android:textColor="@color/textColor"
                        />
                    <TextView
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phon_Sufferer"
                        android:textSize="20dp"
                        android:textColor="@color/textColor"
                        />
                    <TextView
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phamacyLose_Sufferer"
                        android:textSize="20dp"
                        android:textColor="@color/textColor"
                        />
                    <TextView
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ailing_Sufferer"
                        android:textSize="20dp"
                        android:textColor="@color/textColor"
                        />
                    <TextView
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phamacy_Sufferer"
                        android:textSize="20dp"
                        android:textColor="@color/textColor"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    >
                    <TextView
                        android:id="@+id/name_Sufferer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="20dp"
                        android:textColor="@color/text"
                        />
                    <TextView
                        android:id="@+id/lastname_Sufferer"
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lastname"
                        android:textSize="20dp"
                        android:textColor="@color/text"
                        />
                    <TextView
                        android:id="@+id/phon_Sufferer"
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phon"
                        android:textSize="20dp"
                        android:textColor="@color/text"
                        />
                    <TextView
                        android:id="@+id/phamacyLose_Sufferer"
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phamacyLose"
                        android:textSize="20dp"
                        android:textColor="@color/text"
                        />
                    <TextView
                        android:id="@+id/ailing_Sufferer"
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ailing"
                        android:textSize="20dp"
                        android:textColor="@color/text"
                        />
                    <TextView
                        android:id="@+id/phamacy_Sufferer"
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phamacy"
                        android:textSize="20dp"
                        android:textColor="@color/text"
                        />

                </LinearLayout>





            </LinearLayout>



        </LinearLayout>

    </ScrollView>





</LinearLayout>
